--- a/samples/Fox.ConfigKit.Samples.WebApi/Fox.ConfigKit.Samples.WebApi.csproj
+++ b/samples/Fox.ConfigKit.Samples.WebApi/Fox.ConfigKit.Samples.WebApi.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
