fix: Add checks:read permission to wait-for-tests job to access GitHub Checks API

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -20,6 +20,9 @@ jobs:
   wait-for-tests:
     name: Wait for Build and Test Workflow
     runs-on: ubuntu-latest
+    permissions:
+      checks: read
+      contents: read
     steps:
       - name: Wait for all test jobs to complete
         uses: lewagon/wait-on-check-action@v1.3.4
