--- a/src/Fox.ConfigKit.ResultKit/Fox.ConfigKit.ResultKit.csproj
+++ b/src/Fox.ConfigKit.ResultKit/Fox.ConfigKit.ResultKit.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup Label="Framework and Language">
         <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <IsPackable>true</IsPackable>
         <AssemblyName>Fox.ConfigKit.ResultKit</AssemblyName>
         <RootNamespace>Fox.ConfigKit.ResultKit</RootNamespace>
@@ -19,8 +19,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageOutputPath>$(MSBuildThisFileDirectory)..\..\artifacts</PackageOutputPath>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <PackageReleaseNotes>Version 1.0.0: Initial release with Result&lt;T&gt; integration for configuration validation.</PackageReleaseNotes>
-        <Authors>Fox</Authors>
+        <PackageReleaseNotes>Version 1.0.1: Fix documentation encoding for NuGet.org compatibility.</PackageReleaseNotes>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/akikari/Fox.ConfigKit</RepositoryUrl>
         <PackageProjectUrl>https://github.com/akikari/Fox.ConfigKit</PackageProjectUrl>
